<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context=".LoginActivity">



    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/sign_in_back"
                android:layout_width="@dimen/backaroow_width"
                android:layout_height="@dimen/backaroow_height"
                android:src="@drawable/leftarrow"/>

            <TextView
                android:id="@+id/txt_for_email"
                android:layout_below="@+id/sign_in_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_size"
                android:textSize="@dimen/text_size"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/margin_top"
                android:text="Enter your login details here?"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_input"
                android:layout_below="@+id/txt_for_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_mobile"
                    android:textSize="@dimen/text_size"
                    android:inputType="phone"
                    android:textColor="@color/black"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_input"
                android:layout_below="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:visibility="visible"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="@dimen/text_size"
                    android:singleLine="true"
                    />

            </android.support.design.widget.TextInputLayout>

            <!-- Login progress -->
            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:outlineAmbientShadowColor="@color/red"
                android:layout_centerInParent="true"/>

            <TextView
                android:id="@+id/txt_creat_accoint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/size15"
                android:paddingLeft="@dimen/padding_size"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/marginbottom40"
                android:textColor="@color/red"
                android:layout_toLeftOf="@+id/log_in_button"
                android:text="@string/need_create_account"/>

            <TextView
                android:id="@+id/txt_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_size"
                android:textSize="@dimen/size15"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:textColor="@color/red"
                android:layout_toLeftOf="@+id/log_in_button"
                android:text="@string/forgot_pass"/>

            <Button
                android:id="@+id/log_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="@dimen/nextbutton_height"
                android:layout_height="@dimen/nextbutton_height"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/drawable_size"
                android:background="@drawable/next"/>

        </RelativeLayout>
    </ScrollView>
</LinearLayout>