<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordActivity">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimaryDark">

        <ImageView
            android:id="@+id/change_pass_back"
            android:layout_width="@dimen/marginbottom40"
            android:layout_height="@dimen/size30"
            app:srcCompat="@drawable/back_click_arrow_24dp"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/drawable_size"/>


        <TextView
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/size10"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:textSize="@dimen/size20"
            android:textColor="@color/white"
            android:text="@string/change_password"/>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_below="@+id/toolbar"
        tools:context=".SignupActivity"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/register_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_centerInParent="true"
            android:visibility="gone" />


        <TextView
            android:id="@+id/language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/size10"
            android:paddingBottom="@dimen/size10"
            android:textSize="@dimen/size20"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:visibility="visible"
            android:fontFamily="sans-serif"
            android:text="Change Password"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/old_pass_input"
            android:layout_below="@+id/language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/drawable_size"
            android:visibility="visible"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/edt_old_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/old_pass"
                android:inputType="textPassword"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:singleLine="true"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/new_pass_input"
            android:layout_below="@+id/old_pass_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/drawable_size"
            android:visibility="visible"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/edt_new_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter your new password."
                android:inputType="textPassword"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:singleLine="true"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/confirm_pass_input"
            android:layout_below="@+id/new_pass_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/drawable_size"
            android:visibility="visible"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/edt_confirm_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter your confirm password."
                android:inputType="textPassword"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:singleLine="true"
                />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/update_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Update Password"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/size20"
            android:background="@color/primary_dark"
            android:layout_below="@id/confirm_pass_input"/>

    </RelativeLayout>

</RelativeLayout>